* Add miner and chem plant icons * Add calculator source * Fix flex-overflow on input groups for mobile * Closes #377

--- a/src/app/cheat-sheets/game-base/mining/mining.component.scss
+++ b/src/app/cheat-sheets/game-base/mining/mining.component.scss
@@ -4,7 +4,6 @@ img {
 }
 
 .input-group {
-  flex-wrap: nowrap;
   input {
     min-width: 60px;
   }
