--- a/src/styles/_input-group.scss
+++ b/src/styles/_input-group.scss
@@ -1,5 +1,6 @@
 .input-group {
   justify-content: space-around;
+  flex-wrap: nowrap;
 }
 
 .input-group-addon {
